# Sankhya-SDK-python

./: .env.example  .gitignore  LICENSE  PRD_Migracao_Autenticacao_Legado_para_OAuth_Sankhya_FULL (1).md  README.md  RFC_Migracao_Autenticacao_OAuth_Sankhya.md  debug_request.py  mkdocs.yml  pyproject.toml  pytest_output.txt  test_connection.py  test_output.txt  test_output2.txt  test_result.txt
docs/: attributes.md  enums.md  exceptions.md  helpers.md  index.md  know_services.md  migration_guide.md  request_helpers.md  request_wrappers.md  service_models.md  transport_entities.md  validations.md  value_objects.md  wrapper.md
docs/api-reference/: adapters.md  auth.md  core.md  dtos.md  enums.md  events.md  exceptions.md  gateway-client.md  helpers.md  index.md  models.md  request-wrappers.md  validations.md
docs/core-concepts/: architecture.md  entity-system.md  error-handling.md  index.md  session-management.md
docs/examples/: advanced-queries.md  crud-operations.md  custom-entities.md  error-handling.md  file-operations.md  gateway-usage.md  index.md  paged-requests.md  session-management.md
docs/getting-started/: authentication.md  index.md  installation.md  quick-start.md
examples/: README.md  dbexplorer.py  financial_example.py  invoice_example.py  login_oauth.py  oauth_example.py  paged_request_example.py  partial_update_example.py  partner_example.py  product_example.py
sankhya_sdk/: __init__.py  config.py
sankhya_sdk/adapters/: __init__.py  xml_adapter.py
sankhya_sdk/attributes/: __init__.py  (+4 more)
site/: 404.html  index.html  objects.inv  sitemap.xml
(+269 files in other folders)
